--- a/amazon-calculator.css
+++ b/amazon-calculator.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-size: 16px;
 }
 
 html {
@@ -12,14 +13,43 @@ html {
   font-family: "Roboto";
 }
 
-p {
+p:not(:last-child)  {
   margin-bottom: 10px;
 }
 
-body {
+p:last-child {
+  margin-top: 10px;
+}
+
+body,
+.contents {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin-top: 100px;
+}
+
+.contents {
+  border: 1px solid white;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+button {
+  border: 1px solid white;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: transparent;
+  color: white;
+}
+
+button:hover {
+  background-color: white;
+  color: rgb(46, 41, 41);
+}
+
+input {
+  padding: 8px;
+  border: none;
 }
