--- a/Head-or-Tails-Project/head_tail.css
+++ b/Head-or-Tails-Project/head_tail.css
@@ -32,15 +32,22 @@ p {
 }
 
 div {
-  margin-top: 70px;
+  margin: 70px 0;
   width: 50%;
+  height: 300px;
   display: flex;
   justify-content: center;
-  gap: 100px;
+  gap: 50px;
 }
 
 img {
-  width: 40%;
+  width: 250px;
+  height: 250px;
+}
+
+img:hover {
+  width: 300px;
+  height: 300px;
 }
 
 img:hover {
@@ -55,6 +62,7 @@ button {
   color: white;
   border: 1px solid white;
   border-radius: 15px;
+  cursor: pointer;
 }
 
 button:hover {
