--- a/CSS-Folder/rock-paper-scissor.css
+++ b/CSS-Folder/rock-paper-scissor.css
@@ -9,7 +9,7 @@
 html {
   font-size: 16px;
   font-family: "Roboto";
-  background-color: bisque;
+  background-color: #f9f4f4;
 }
 
 body {
@@ -25,15 +25,21 @@ div {
   margin-top: 20px;
 }
 
+.choices-div {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 40px;
+}
+
 .choices {
   width: 200px;
   height: 200px;
-  border: 1px solid white;
+  border: none;
   border-radius: 10px;
 }
 
 .choices:hover {
-  background-color: white;
+  background-color: #d9bbec;
 }
 
 .computer-image,
@@ -46,4 +52,21 @@ div {
 
 .computer-image {
   transform: scaleX(-1);
+}
+
+.reset-button {
+  border: 2px solid #d9bbec;
+  padding: 20px;
+  background-color: transparent;
+  border-radius: 20px;
+  font-size: 25px;
+  font-weight: bolder;
+  transition: all 0.3s;
+}
+
+.reset-button:hover {
+  background-color: #d9bbec;
+  color: #f9f4f4;
+  border: 2px solid #d9bbec;
+  transform: translateY(-10px);
 }
