--- a/CSS-Folder/rock-paper-scissor.css
+++ b/CSS-Folder/rock-paper-scissor.css
@@ -27,7 +27,7 @@ div {
 
 .choices-div {
   display: flex;
-  gap: 20px;
+  gap: 30px;
   margin-bottom: 40px;
 }
 
@@ -35,20 +35,27 @@ div {
   width: 200px;
   height: 200px;
   border: none;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   border-radius: 10px;
-  transition: background-color 0.5s, transform 0.5s;
+  transition: all 0.3s;
 }
 
 .choices:hover {
-  background-color: #aba9ab;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
   transform: translateY(-10px);
 }
 
-.computer-image,
-.user-image {
+.choices:active {
+  transform: translateY(5px);
+  box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset,
+    rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
+  transition-delay: -10s;
+}
+
+.computer-image {
   height: 200px;
   width: 200px;
-  background-size: cover;
   margin: 0;
 }
 
@@ -59,8 +66,9 @@ div {
 .reset-button {
   border: 2px solid #d9bbec;
   padding: 20px;
-  color: #d9bbec;
-  background-color: transparent;
+  color: #f9f4f4;
+  background-color: #d9bbec;
+
   border-radius: 20px;
   font-size: 25px;
   font-weight: bolder;
@@ -68,8 +76,13 @@ div {
 }
 
 .reset-button:hover {
-  background-color: #d9bbec;
-  color: #f9f4f4;
+  background-color: transparent;
+  color: #d9bbec;
   border: 2px solid #d9bbec;
   transform: translateY(-10px);
+}
+
+.reset-button:active {
+  transform: translateY(0px);
+  transition-delay: -10s;
 }
