--- a/CSS-Folder/rock-paper-scissor.css
+++ b/CSS-Folder/rock-paper-scissor.css
@@ -68,7 +68,6 @@ div {
   padding: 20px;
   color: #f9f4f4;
   background-color: #d9bbec;
-
   border-radius: 20px;
   font-size: 25px;
   font-weight: bolder;
@@ -85,4 +84,46 @@ div {
 .reset-button:active {
   transform: translateY(0px);
   transition-delay: -10s;
+}
+
+.history-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 300px;
+  margin-bottom: 500px;
+}
+
+.logs {
+  /* box-shadow: rgba(0, 0, 0, 0.3) 0px 1px 4px; */
+  border: 10px solid #d9bbec;
+  border-radius: 10px;
+  width: 670px;
+  height: 700px;
+  overflow-y: hidden;
+}
+
+.log-div {
+  padding: 10px 30px;
+}
+
+.log-container {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.log-titles ul {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  list-style: none;
+}
+
+.log-container {
+  border-radius: 10px;
+  padding: 10px;
+  width: 100%;
+  height: 50px;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 1px 4px;
 }
