--- a/CSS-Folder/rock-paper-scissor.css
+++ b/CSS-Folder/rock-paper-scissor.css
@@ -21,10 +21,6 @@ body {
   padding-bottom: 50px;
 }
 
-div {
-  margin-top: 20px;
-}
-
 .choices-div {
   display: flex;
   gap: 30px;
@@ -57,9 +53,6 @@ div {
   height: 200px;
   width: 200px;
   margin: 0;
-}
-
-.computer-image {
   transform: scaleX(-1);
 }
 
@@ -99,31 +92,61 @@ div {
   /* box-shadow: rgba(0, 0, 0, 0.3) 0px 1px 4px; */
   border: 10px solid #d9bbec;
   border-radius: 10px;
-  width: 670px;
+  width: 500px;
   height: 700px;
+  padding: 20px 50px;
   overflow-y: hidden;
 }
 
-.log-div {
-  padding: 10px 30px;
-}
-
-.log-container {
+.log-titles {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .log-titles ul {
-  display: flex;
-  justify-content: space-evenly;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  text-align: center;
   align-items: center;
   list-style: none;
+  font-size: 30px;
 }
 
-.log-container {
-  border-radius: 10px;
-  padding: 10px;
-  width: 100%;
-  height: 50px;
+.title-img-text-container,
+.log-img-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.title-img-text-container p {
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.img-icon-title {
+  margin-bottom: 10px;
+  height: 70px;
+  width: 70px;
+}
+
+.log-div {
+  height: 80px;
+  margin-top: 30px;
   box-shadow: rgba(0, 0, 0, 0.3) 0px 1px 4px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.log-img {
+  height: 50px;
+  width: 50px;
+}
+
+.computer-img {
+  transform: scaleX(-1);
 }
