--- a/CSS-Folder/rock-paper-scissor.css
+++ b/CSS-Folder/rock-paper-scissor.css
@@ -78,7 +78,8 @@ body {
 
 .buttons {
   border: 2px solid #ed3d3d;
-  padding: 10px;
+  width: 150px;
+  height: 50px;
   color: #f9f4f4;
   background-color: #ed3d3d;
   border-radius: 30px;
